<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue"
        android:padding="8dp">

        <Spinner
            android:id="@+id/placesOnMapMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/baseline_reorder_white_24"
            android:entries="@array/menuItems" />


        <TextView
            android:id="@+id/placesOnMapTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:text="@string/places_item"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/toListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_btn_blue"
            android:text="@string/to_list"
            android:theme="@style/Theme.Button1" />

        <Button
            android:id="@+id/addPlaceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_btn_blue"
            android:text="@string/add_place"
            android:theme="@style/Theme.Button1" />

    </LinearLayout>


    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />


</LinearLayout>