...
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue"
        android:padding="8dp">

        <Spinner
            android:id="@+id/mushroomsCatalogMenu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/baseline_reorder_white_24"
...
            android:layout_weight="1"
            android:background="@drawable/rounded_btn_gray"
            android:text="@string/edible_button"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/toNotEdibleCatalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_btn_blue"
            android:text="@string/not_edible_button"
...
