...
                android:text="@string/place_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/placeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:imeOptions="actionDone"
                android:maxLines="1"
...
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="5dp"
                    android:background="@drawable/rounded_btn_blue"
                    android:text="@string/save"
...
